--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-watch": "^5.0.1",
     "normalize-scss": "^7.0.1"
   }
 }
